--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <header id="up" class="header">
         <nav id="nav" class="nav">
             <div class="header__logo"><img src="icons/logo.png" alt="AppSon"></div>
-                <div class="col-lg offset-6 ">
-                    <ul class="header__menu">
-                        <li><a href="#up">Home</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#pages">Pages</a></li>
-                    </ul>
+                <div class="col-lg offset-7 d-lg-flex align-items-center justify-content-center">
+                    <div class="header__menu">
+                        <a href="#up">Home</a>
+                        <a href="#features">Features</a>
+                        <a href="#pricing">Pricing</a>
+                        <a href="#pages">Pages</a>
+                        <button class="button button_nav">Sign up</button>
+                    </div>
                 </div>
-            <button class="button button_nav">Sign up</button>
             <div class="hamburger">
                 <div class="hamburger__wrapper">
                     <span></span>
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 
-                <div class="col-md-12">
+                <div class="col-md-12 d-flex justify-content-center">
                     <div class="about__messaging">
                         <div><img src="icons/about/about1.png" alt="messaging"></div>
                         <div class="about__wrapper">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
         
-                <div class="col-md-12">
+                <div class="col-md-12 d-flex justify-content-center">
                     <div class="about__touch">
                         <div class="about__wrapper about__wrapper_touch">
                             <h3 class="title title_about">Keep in Touch</h3>
